Changelog for UCDPloneSkin

UCDPloneSkin 2.0 - Released - Feb, 20 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - added configlet option for header background image

UCDPloneSkin 2.0 - Released - Feb, 19 2007
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - updated docs for clearing left slot after PloneCASLogin install
    - link to contact-info in footer is now absolute using $portal_url
    - removed atct_topic_view.pt
      - originally removed "contained smart folders" text from template
        users can customize this template on their own if needed
    - fixed skip to navigation link
    - fixed accesskeys
    - re-enabled accessibility-info link w/ configlet option for hiding it
    - added option for livesearch
      - hide accesskey details on accessibility-info page if not in use
    - configlet option for copyright string
    - configlet option for privacy statement
    - hide byline from anon users during install (AllowAnonymousViewAbout)

UCDPloneSkin 1.0.3 - Released - Dec, 15 2006
  [ Scott Beardsley, sbeardsley@ucdavis.edu ]
    - reverted webmaster link in footer
    - removed accessibility statement in footer
    - reverted copyright statement in footer
    - removed favicon.ico link in header

UCDPloneSkin 1.0.2 - Released - Dec, 14 2006
  [ Charles McLaughlin, cmclaughlin@ucdavis.edu ]
    - a tags inside h1..h6 are now blue
    - added folder_listing.pt, changed "last modified" to "last updated"
    - Allow all content types to show up in "in this section"
    - Display fullname in member search
    - Fixed member search wrapping

UCDPloneSkin 1.0.1 - Released - Dec, 13 2006
  [ Scott Beardsley, sbeardsley@ucdavis.edu ]
    - Fixed horizontal scroll bar issue in Firefox
    - added accessibility-info and change webmaster link
    - changed copyright (removed "campus" etc)
    - added favicon.ico link in header
    - removed Author info in header (gave me probs)
    - join_form should import now (typos)