@@ -7,6 +7,7 @@ privacyStatement = context.REQUEST.get('privacyStatement', None)
 showAccessibility = context.REQUEST.get('showAccessibility', None)
 bgImage = context.REQUEST.get('bgImage', None)
 deleteBgImage = context.REQUEST.get('deleteBgImage', None)
+bgImageNoRepeat = context.REQUEST.get('bgImageNoRepeat', None)
 
 
 portal = context.portal_url.getPortalObject()
@@ -19,6 +20,7 @@ pp_ucd_props.manage_changeProperties(searchbox=searchbox)
 pp_ucd_props.manage_changeProperties(copyright=copyright)
 pp_ucd_props.manage_changeProperties(privacyStatement=privacyStatement)
 pp_ucd_props.manage_changeProperties(showAccessibility=showAccessibility)
+pp_ucd_props.manage_changeProperties(bgImageNoRepeat=bgImageNoRepeat)
 
 
 if deleteBgImage:
